--- a/assignments/termProject/services.html
+++ b/assignments/termProject/services.html
@@ -1,105 +1,124 @@
 <!DOCTYPE HTML>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-        <title>Services Page | Temple Inn Suites</title>
 
-        <!-- This the normalize.css file link that must be first before any other links!-->
-        <link href="styles/normalize.css" type="text/css" rel="stylesheet" />
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <title>Services Page | Temple Inn Suites</title>
+    <meta name="description" content="Final Term Project for Cindy Jorgensen in CIT 230:Web Front-End Development
+    at Brigham Young University-Idaho.">
 
-        <!-- This is the link to the CSS file that will be used to format the css files-->
-        <link href="styles/small.css" type="text/css" rel="stylesheet" />
-        <link href="styles/medium.css" type="text/css" rel="stylesheet" />
-        <link href="styles/large.css" type="text/css" rel="stylesheet" />
+    <!-- This the normalize.css file link that must be first before any other links!-->
+    <link href="styles/normalize.css" type="text/css" rel="stylesheet" />
 
-        <!-- This is the link to the icon imagees used. -->
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!-- This is the link to the CSS file that will be used to format the css files-->
+    <link href="styles/small.css" type="text/css" rel="stylesheet" />
+    <link href="styles/medium.css" type="text/css" rel="stylesheet" />
+    <link href="styles/large.css" type="text/css" rel="stylesheet" />
 
-    </head>
+    <!-- This is the link to the icon imagees used. -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-    <body>
-        <header id="swatch3" class="clearfix">
-            <div class="box">
-                <img id="temple" class="centerIMG" src="images/TempleInnSuitesLogo.png" alt="temple icon">
+</head>
+
+<body>
+    <header id="swatch3" class="clearfix">
+        <div class="box">
+            <img id="temple" class="centerIMG" src="images/TempleInnSuitesLogo.png" alt="temple icon">
+        </div>
+        <div class="tagline"> "Providing services to those who provide services for others."</div>
+    </header>
+    <div id="myTopNav" class="navbar">
+        <a href="index.html">Home Page</a>
+        <a href="temple.html">Temple</a>
+        <a href="reservations.html">Reservations</a>
+        <div class="dropdown">
+            <button class="dropbtn">Services<i class="fa fa-caret-down"></i></button>
+            <div class="dropdown-Content">
+                <a class="active" href="services.html">Services</a>
+                <a href="reception.html">Reception</a>
+                <a href="fullTimeTempleMissionary.html">Full-Time Temple Missonary</a>
             </div>
-            <div class="tagline"> "Providing services to those who provide services for others."</div>
-        </header>
-        <div id="myTopNav" class="navbar">
-                <a href="index.html">Home Page</a>
-                <a href="temple.html">Temple</a>
-                <a href="reservations.html">Reservations</a>
-                <div class="dropdown">
-                    <button class="dropbtn">Services<i class="fa fa-caret-down"></i></button>
-                        <div class="dropdown-Content">
-                            <a class="active" href="services.html">Services</a>
-                            <a href="reception.html">Reception</a>
-                            <a href="fullTimeTempleMissionary.html">Full-Time Temple Missonary</a>
-                        </div>
-                    </div>  
-                <a href="contactus.html">Contact</a>
-                <a href="citereferences.html">Cited Works</a>
-                <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
+        </div>
+        <a href="contactus.html">Contact</a>
+        <a href="citereferences.html">Cited Works</a>
+        <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
+    </div>
+    <main>
+        <h1 class="centerText">We are able to provide all the services you need in one place.</h1>
+        <img class="fltRight" src="images/Reception_cake-celebration-delicious-1727415.jpg" alt="cakes">
+        <p>We offer the following <em>specialized services</em> to temple patrons.</p>
+        <ul>
+            <li>Access to changing rooms and bathroom facilities to those who have traveled far and need to change
+                clothing prior to their visit to the temple.</li>
+            <li>We offer a low-cost playroom for short-term babysitting services for children of patrons. </li>
+            <li>Long-term stay accomodations in kitchenette suites for full-time temple missionaries.</li>
+            <li>Multiple wedding receptions options that can easily be customized and a simple catering menu and kitchen
+                access for food preparation and serving.</li>
+            <li>A famly serach center that supports family search and ordinance work.</li>
+        </ul>
+
+        <p>Our Guests enjoy the following free amenities: </p>
+        <ul>
+            <li>Continental Breakfast Buffet</li>
+            <li>Exercise/ Workout Room</li>
+            <li>Indoor Pool</li>
+            <li>WiFi high speed internet access and smart TVs</li>
+            <li>Parking</li>
+            <li>Temple shuttle</li>
+            <li>Family history consultation and family ordinance card services.</li>
+        </ul>
+        <p class="centerText">"As we work to create light for other,</p>
+        <p class="centerText">we naturally light our own way."</p>
+        <p class="centerText">~ May Anne Radmacher</p><br>
+    </main>
+
+    <footer class="swatch3">
+        <address onLoad="currentDate()">
+            <div class="contactMe, clearfix">
+                <!--The div element for the map -->
+
+                <div class="nested1"><b>Temple Inn & Suites</b></div>
+                <div class="mapouter gmap_canvas">
+                    <iframe id="gmap_canvas"
+                        src="https://maps.google.com/maps?q=800%20Montgomery%20Lane%20%23300%2C%20Bethesda%2C%20MD%2020814&t=&z=15&ie=UTF8&iwloc=&output=embed">
+                    </iframe><a href="https://www.emojilib.com"></a>
+                </div>
+                <!--For modern browsers-->
+                <div>
+                    <i class="material-icons">
+                        location_on</i>
+                    4800 Montgomery Lane #300 </div>
+                <div>Bethesda, MD 20814 </div>
+                <div>
+                    <!--For modern browsers-->
+
+                    <i class="material-icons">
+                        call
+                    </i></div>
+                <div>208-555-6677 </div>
+                <div>
+                    <!--For modern browsers-->
+
+                    <i class="material-icons">
+                        mail_outline
+                    </i></div>
+                <div><a href="mailto:reservations@templeinnsuites.com">reservations@templeinnsuites.com</a> </div>
             </div>
-        <main>
-            <h1 class="centerText">We are able to provide all the services you need in one place.</h1>
-            <img class="fltRight" src="images/Reception_cake-celebration-delicious-1727415.jpg" alt="cakes">
-            <p>We offer the following <em>specialized services</em> to temple patrons.</p>
-                <ul>
-                    <li>Access to changing rooms and bathroom facilities to those who have traveled far and need to change clothing prior to their visit to the temple.</li>
-                    <li>We offer a low-cost playroom for short-term babysitting services for children of patrons. </li>
-                    <li>Long-term stay accomodations in kitchenette suites for full-time temple missionaries.</li>
-                    <li>Multiple wedding receptions options that can easily be customized and a simple catering menu and kitchen access for food preparation and serving.</li>
-                    <li>A famly serach center that supports family search and ordinance work.</li>
-                </ul>
+        </address>
+        <br>
+        <div class="centerText">
+            &copy; 2019 - Cindy Jorgensen - Location: Alaska - <a href="http://www.byui.edu/online">BYU-Idaho Online
+                Learning</a>
+        </div>
+        <div id="date"></div>
+    </footer>
 
-            <p>Our Guests enjoy the following free amenities:            </p>
-                <ul>
-                    <li>Continental Breakfast Buffet</li>
-                    <li>Exercise/ Workout Room</li>
-                    <li>Indoor Pool</li>
-                    <li>WiFi high speed internet access and smart TVs</li>
-                    <li>Parking</li>
-                    <li>Temple shuttle</li>
-                    <li>Family history consultation and family ordinance card services.</li>
-                </ul>
-            <p class="centerText">"As we work to create light for other,</p>
-            <p class="centerText">we naturally light our own way."</p>
-            <p class="centerText">~ May Anne Radmacher</p><br>
-        </main>
+    <script src="scripts/currentdate.js"> </script>
+    <script src="scripts/hamburger.js"> </script>
+    <script src="scripts/temple.js"></script>
+    <script src="scripts/button.js"></script>
 
-        <footer class="swatch3">
-                <!--    <div class="navbar">
-                        <a href="index.html">Home Page</a>
-                        <a href="temple.html">Temples</a>
-                        <a href="styleguide.html">Planning Document</a>
-                        <a href="citereferences.html">Cite References</a>
-                    </div> -->
-                    <address  onLoad="currentDate()" >
-                            <div class="contactMe, clearfix">
-                                                    <!--The div element for the map -->
-        
-                                <div class="nested1"><b>Temple Inn & Suites</b></div>
-                                <div class="mapouter gmap_canvas">
-                                        <iframe id="gmap_canvas" src="https://maps.google.com/maps?q=800%20Montgomery%20Lane%20%23300%2C%20Bethesda%2C%20MD%2020814&t=&z=15&ie=UTF8&iwloc=&output=embed"> </iframe><a href="https://www.emojilib.com"></a>
-                                    </div> 
-                                <div class="nested2"><i class="fa fa-map-marker" style="font-size:24px"></i>4800 Montgomery Lane #300 </div>
-                                <div class="nested3">Bethesda, MD 20814  </div>
-                                <div class="nested4"><i class="fa fa-phone" style="font-size:24px"></i></div>
-                                <div class="nested5">208-555-6677  </div>
-                                <div class="nested6"><i class="fa fa-envelope-o" style="font-size:24px"></i> </div>
-                                <div class="nested7"><a href="mailto:reservations@templeinnsuites.com">reservations@templeinnsuites.com</a> </div>
-                            </div>
-                        </address>
-                    <br>
-                    <div class="centerText">
-                    &copy; 2019 - Cindy Jorgensen - Location: Alaska - <a href="http://www.byui.edu/online">BYU-Idaho Online Learning</a>
-                    </div>
-                    <div id="date"></div>
-                </footer>
-                <script src="scripts/currentdate.js"> </script>
-                <script src="scripts/hamburger.js"> </script>
-                <script src="scripts/temple.js"></script>
-                <script src="scripts/button.js"></script>
-            </body>
-        </html>
+</body>
+
+</html>
