--- a/assignments/termProject/index.html
+++ b/assignments/termProject/index.html
@@ -50,7 +50,7 @@
         <h2 class="centerText"> Now open in Houston, Texas</h2>
         <div id="opening">
             <img src="images/INDEX_Temple_Houston.jpg" alt="Houston Temple exterior">
-            <img src="images/INDEX_Temple_Houston(2).jpg" alt="Houston Temple exterior">
+            <img src="images/INDEX_Temple_Houston(2).jpg" alt="Houston Temple exterior other side">
             <img src="images/INDEX_Temple_Houston(room1).jpg" alt="room in the Houston Temple">
             <img src="images/INDEX_Temple_Houston(room2).jpg" alt="another room in Houston Temple">
             <img src="images/INDEX_Temple_Houston(room3).jpg" alt="baptism font in Houston Temple">
@@ -112,14 +112,14 @@
 
     <footer class="swatch3">
         <address onLoad="currentDate()">
-            <div class="contactMe, clearfix">
+            <div>
                 <!--The div element for the map -->
 
                 <div class="nested1"><b>Temple Inn & Suites</b></div>
                 <div class="mapouter gmap_canvas">
                     <iframe id="gmap_canvas"
                         src="https://maps.google.com/maps?q=800%20Montgomery%20Lane%20%23300%2C%20Bethesda%2C%20MD%2020814&t=&z=15&ie=UTF8&iwloc=&output=embed">
-                    </iframe><a href="https://www.emojilib.com"></a>
+                    </iframe>
                 </div>
                 <!--For modern browsers-->
                 <div>
