--- a/assignments/termProject/temple.html
+++ b/assignments/termProject/temple.html
@@ -56,14 +56,14 @@
 
     <footer class="swatch3">
         <address onLoad="currentDate()">
-            <div class="contactMe, clearfix">
+            <div>
                 <!--The div element for the map -->
 
                 <div class="nested1"><b>Temple Inn & Suites</b></div>
                 <div class="mapouter gmap_canvas">
                     <iframe id="gmap_canvas"
                         src="https://maps.google.com/maps?q=800%20Montgomery%20Lane%20%23300%2C%20Bethesda%2C%20MD%2020814&t=&z=15&ie=UTF8&iwloc=&output=embed">
-                    </iframe><a href="https://www.emojilib.com"></a>
+                    </iframe>
                 </div>
                 <!--For modern browsers-->
                 <div>
