--- a/assignments/termProject/citereferences.html
+++ b/assignments/termProject/citereferences.html
@@ -83,6 +83,8 @@
             <li><a href="https://www.pexels.com/photo/asparagus-barbecue-cuisine-delicious-361184/">Pixabay. 2019
                     March 24. <i>Grilled Meat Dish served on White Plate</i></a>(Pexels.com)</li>
         </ol>
+        <br>
+        <p>All content is listed - <a href="styleguide.html">Style guide or planning document </a></p>
     </main>
     <footer class="swatch3">
         <address onLoad="currentDate()">
